Prevented scrolling when the nav menu is open on mobile, added in auth flow

--- a/apps/www/src/components/navigation/main/nav-content.module.scss
+++ b/apps/www/src/components/navigation/main/nav-content.module.scss
@@ -64,7 +64,14 @@
 		display: flex;
 		flex-direction: column;
 		gap: $cds-scale-base;
+		margin-top: auto;
+		padding-top: $cds-scale-2x-large;
 	}
+}
+
+.sign-out-button {
+	width: 100%;
+	text-align: left;
 }
 
 // Menu button
